# python-calculator

./: Dockerfile  Jenkinsfile  README.md  pyproject.toml
calculator/: operations.py
tests/calculator/: test_operations.py
