[tool.poetry]
name = "python-calculator"
version = "0.1.0"
description = ""
authors = ["Thomas Maloney <thomas.l.maloney@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
